--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "axios-stubber",
   "version": "0.0.4",
   "description": "Simplified axios request and response stubbing",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest"
   },
