--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "axios-stubber",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Simplified axios request and response stubbing",
   "main": "dist/index.js",
+  "types": "src",
   "scripts": {
     "test": "jest"
   },
