--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "axios-stubber",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "Simplified axios request and response stubbing",
   "main": "dist/index.js",
   "types": "src",
   "scripts": {
+    "build": "rimraf dist && tsc",
     "test": "jest"
   },
   "repository": {
@@ -25,13 +26,16 @@
   },
   "homepage": "https://github.com/acdcjunior/axios-stubber#readme",
   "dependencies": {
-    "axios-mock-adapter": "^1.20.0"
+    "axios": "^0.27.2",
+    "fast-deep-equal": "^3.1.3",
+    "is-blob": "^2.1.0",
+    "is-buffer": "^2.0.5"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.33",
-    "axios": "^0.27.2",
     "jest": "^28.1.0",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
